# pw-bot

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
config/: address.json  functions.json  packets.json
src/: game_api.cc  game_api.h  main.cc
src/utils/: common_utils.cc  common_utils.h  config_utils.cc  config_utils.h  process_manager.cc  process_manager.h
